# dnd-rag

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  railway.toml
docs/: index.html  writeup.html
docs/eval_results/: report.html
frontend/: index.html
scripts/: evaluate.py  ingest.py
src/: config.py
src/api/: main.py  schemas.py
src/api/routes/: health.py  query.py
src/eval/: dataset.py  report.py  runner.py
src/generation/: chain.py  prompts.py
src/ingestion/: chunker.py  embedder.py  loader.py
src/retrieval/: reranker.py  retriever.py  vectorstore.py
tests/integration/: test_api.py
tests/unit/: test_chunker.py  test_retriever.py
