[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dnd-rag"
version = "0.1.0"
description = "Production-grade RAG system for D&D 5e 2024 SRD"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=2.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "qdrant-client[fastembed]>=1.10.0",
    "fastembed>=0.4.0",
    "sentence-transformers>=3.0.0",
    "pymupdf>=1.24.0",
    "ragas>=0.2.0",
    "datasets>=2.19.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.3.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
ingest = "scripts.ingest:app"
evaluate = "scripts.evaluate:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/eval/report.py" = ["E501"]
"src/config.py" = ["UP036", "UP042"]  # 3.10 compatibility shim kept intentionally

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
